--- a/about.html
+++ b/about.html
@@ -4,4 +4,5 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Full stack web developer with a passion for continuous learning and personal growth.  With experience in Ruby on Rails, JavaScript, and React and a background in Psychology, Health, and Research, I discovered web development through self-teaching how to code. I bring strong skills in team-building and project management. Over the years I have already gained a range of different research experiences. During my study abroad program in Mexico, I was able to conduct several research projects I truly enjoyed. Such as Eye tracking, cognative thinking and Video game processing.  I enjoy conducting research on how to better the human performance and working with people who seek to be more productive while encouraging positive attitude in their over all life. 
+<br />Helping others discover a better version of  themselves is what I love about my career the most. I enjoy reading, soccer, Salsa dance and Traveling to different parts of the world.  Cheers to you success, Thanks for dropping in. </p>
